tests/miniJava/neg/000083_mutation.MiniJava
class java { public class java { public static void Main ( String [ ] java ) { { } } } void Main ( String [ ] java ) { { } } }
